src/test/deca/syntax/invalid/resultats/test32_readFloat-lex.res
'{': [@0,302:302='{',<36>,15:0]
IDENT: [@1,305:309='float',<26>,16:1]
IDENT: [@2,311:311='x',<26>,16:7]
';': [@3,312:312=';',<39>,16:8]
IDENT: [@4,315:315='x',<26>,17:1]
'=': [@5,316:316='=',<29>,17:2]
'readFloat': [@6,317:325='readFloat',<16>,17:3]
'(': [@7,326:326='(',<34>,17:12]
';': [@8,327:327=';',<39>,17:13]
'}': [@9,329:329='}',<37>,18:0]
